# Structures

./: .gitignore  CMakeLists.txt  run_tests.sh
include/: linkedlist.h
src/: CMakeLists.txt  linkedlist.c  linkedlist.h  main.c  single_list.c  single_list.h  stack.c  stack.h
tests/: CMakeLists.txt  LinkedListTests.cpp  StackTests.cpp  main.cpp
